# cookiecutter-flect

./: .gitignore  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  pyproject.toml  vercel.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/app/: layout.py  page.py
